<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">Picture Grid</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="label_transparency">Transparency</string>
    <string name="label_border">Border</string>
    <string name="label_color">Color</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="app_id">269544153136696</string>
    <string name="left_mirror">Left Mirror</string>
    <string name="right_mirror">Right Mirror</string>
    <string name="top_mirror">Top Mirror</string>
    <string name="bottom_mirror">Bottom Mirror</string>
    <string name="select_pic">Select Photo from Gallery</string>
    <string name="save_image">Save Mirror Image</string>
    <string name="success">Successfully saved....</string>
    <string name="failed">Saving failed....</string>
    <string name="saving_image">Saving image....</string>
    <string name="applying_effect">Applying Effect</string>
    <string name="fetching_photos">Fetching photos...</string>
    <string name="wait">Please Wait!</string>
    <string name="loading">Loading...</string>
    <string name="select_image">Please select image!!!</string>
    <string name="loading_photos">Loading photos...</string>
    <string name="load_album">Loading albums...</string>
    <string name="label_choose_background">Choose Backgroud</string>
    <string name="label_edit_layer">EDIT LAYER</string>
    <string name="laber_border">Image Border</string>
    <string name="button_label_delete_text">Delete Text</string>
    <string name="button_label_done_text">Done</string>
    <string name="button_label_cancel_text">Cancel</string>
    <string name="button_add_text">Add Text</string>
    <string name="hint_enter_text">Your text goes here</string>
    <string name="text_dummy">Hello!!</string>
    <string name="image_path">/dcim/photomixer/DEXATI</string>
    <string name="label_cutphoto">Cut Photo</string>
    <string name="label_pastephoto">Paste Photo</string>
    <string name="label_screen_2_sticker">Draw over image and cut selected area</string>
    <string name="label_screen_1_cut_message">Draw a Closed loop and Select options from dialog to Cut Photo.</string>
    <string name="label_screen_2_cut_message">Select a Photo to Fine tune Cut Photo.You can Erase and Zoom Photo.</string>
    <string name="label_screen_1_paste_message">Paste your cut Photos. You can paste photos and adjust with 2 finger gestures.</string>
    <string name="label_advanceEdit">Advance Edit</string>
    <string name="label_free_form">Free Form</string>
    <string name="dialog_text">You can Edit it further or pick another regions by canceling.</string>
    <string name="label_create_collage">Create Collage</string>
    <string name="toast_msg_save_clicked">Please Add photo and create collage !!!</string>
    <string name="label_editing_image">Editing image...</string>
    <string name="image_add_msg">You can only add 30 images...</string>
</resources>
